--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -15,3 +15,8 @@ last_selected_language="GDScript"
 
 scripts=["res://scripts/world.gd", "res://scripts/player.gd"]
 scenes=["res://objetos/player.tscn", "res://escenas/world.tscn"]
+
+[color_picker]
+
+picker_shape=3
+recent_presets=PackedColorArray(0, 0, 0.439216, 1, 0.574095, 0.713509, 1, 1, 0.0135465, 0.333585, 0.423305, 1, 0.651217, 0.90023, 0.998249, 1)
