--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,11 +30,12 @@ current_scene="res://escenas/world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=11
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/player.gd", "res://scripts/world.gd"]
-selected_script="res://scripts/player.gd"
+selected_script="res://scripts/world.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
