--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://recursos/minecraft_tile_set_by_game_boy09_d3fzh91-fullview.jpg")
+dock_filesystem_selected_paths=PackedStringArray("res://escenas/menu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://recursos/", "res://objetos/", "res://escenas/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,16 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://escenas/world.tscn", "res://objetos/player.tscn")
+open_scenes=PackedStringArray("res://escenas/world.tscn", "res://objetos/player.tscn", "res://escenas/menu.tscn", "res://escenas/configuracion.tscn")
 current_scene="res://escenas/world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=11
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/player.gd", "res://scripts/world.gd"]
+open_scripts=["res://scripts/menu.gd", "res://scripts/player.gd", "res://scripts/world.gd"]
 selected_script="res://scripts/world.gd"
 open_help=[]
 script_split_offset=70
