--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://escenas/menu.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://recursos/fotoJuego.jpeg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://recursos/", "res://objetos/", "res://escenas/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://escenas/world.tscn", "res://objetos/player.tscn", "res://escenas/menu.tscn", "res://escenas/configuracion.tscn")
-current_scene="res://escenas/world.tscn"
+current_scene="res://escenas/menu.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,12 +34,12 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/menu.gd", "res://scripts/player.gd", "res://scripts/world.gd"]
+open_scripts=["res://scripts/configuracion.gd", "res://scripts/menu.gd", "res://scripts/player.gd", "res://scripts/world.gd"]
 selected_script="res://scripts/world.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.07143
 
 [ShaderEditor]
 
