--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -20,8 +20,8 @@ state={
 "column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 104,
-"scroll_position": 88.0,
+"row": 102,
+"scroll_position": 86.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,10 +31,28 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 9,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 8,
+"selection_to_column": 0,
+"selection_to_line": 9,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/configuracion.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
