--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://escenas/world.tscn", "res://objetos/player.tscn", "res://escenas/menu.tscn", "res://escenas/configuracion.tscn")
-current_scene="res://escenas/menu.tscn"
+current_scene="res://escenas/configuracion.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,12 +34,12 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/configuracion.gd", "res://scripts/menu.gd", "res://scripts/player.gd", "res://scripts/world.gd"]
-selected_script="res://scripts/world.gd"
+open_scripts=["res://scripts/configuracion.gd", "res://scripts/Global.gd", "res://scripts/menu.gd", "res://scripts/player.gd", "res://scripts/world.gd"]
+selected_script="res://scripts/configuracion.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.07143
+zoom_factor=1.0
 
 [ShaderEditor]
 
